
0.4.3.pre
-----
  * adding jsml support
  * dog-fooding

0.4.0
-----
  * adding experimental export and public classes for common.js

0.4.0.pre14
-----------
  * lookback error when no spacing
 
0.4.0.pre13
-----------
  * lookback off by 1
  * added pp for printing tree
 
0.4.0.pre12
-----------
  * regex bug
  * rails support

0.4.0.pre11
-----------
  * adding boot strap for web browsers
 
0.4.0.pre10
-----------
  * multi-line comment parsing fix

0.4.0.pre8
----------
  * adding filename to module._compile for better debugging

0.4.0.pre7
----------
  * added node adapter for system calls

0.4.0.pre6
----------
  * fixed divide/regex bug with spacing

0.4.0.pre5
----------
  * fixed bad merge

0.4.0.pre4
----------
  * fixed foreach length bug

0.4.0.pre3
----------
  * fixed "module" keyword conflict bug

0.4.0.pre2
----------
  * adding static var/function
  * adding jsml
  * adding divide/regex parsing support