@@ -1,5 +1,5 @@
 module Mochiscript
-  VERSION = "0.4.3.pre1".sub("-", '.')
+  VERSION = "0.4.3.pre2".sub("-", '.')
 end
 
 require File.dirname(__FILE__) + '/mochiscript/core'
