@@ -1,0 +1,3 @@
+var foo = <<END;
+  hello{}
+END
