@@ -1,0 +1,5 @@
+class Simple {
+  function foo() {
+
+  }
+}
